Use common for all projects

--- a/Common.Test/Common.Test.csproj
+++ b/Common.Test/Common.Test.csproj
@@ -5,13 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Common.BridgeClasses" Version="1.0.5" />
     <PackageReference Include="xunit" Version="2.4.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\BiddingLogic\BiddingLogic.csproj" />
     <ProjectReference Include="..\Common.Tosr\Common.Tosr.csproj" />
-    <ProjectReference Include="..\Common\Common.csproj" />
   </ItemGroup>
 
 </Project>
