--- a/Wpf.Tosr/Wpf.Tosr.csproj
+++ b/Wpf.Tosr/Wpf.Tosr.csproj
@@ -29,7 +29,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Extended.Wpf.Toolkit" Version="4.1.0" />
+    <PackageReference Include="Common.BridgeClasses" Version="1.0.5" />
+    <PackageReference Include="Extended.Wpf.Toolkit" Version="4.3.0" />
   </ItemGroup>
 
   <ItemGroup>
