--- a/BiddingLogic/BiddingLogic.csproj
+++ b/BiddingLogic/BiddingLogic.csproj
@@ -26,15 +26,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Common.BridgeClasses" Version="1.0.5" />
     <PackageReference Include="morelinq" Version="3.3.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="NLog" Version="4.7.10" />
+    <PackageReference Include="NLog" Version="4.7.15" />
     <PackageReference Include="ObjectCloner" Version="2.2.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Common.Tosr\Common.Tosr.csproj" />
-    <ProjectReference Include="..\Common\Common.csproj" />
     <ProjectReference Include="..\Solver\Solver.csproj" />
   </ItemGroup>
 
