removed some warnings

--- a/Wpf.Tosr/Wpf.Tosr.csproj
+++ b/Wpf.Tosr/Wpf.Tosr.csproj
@@ -55,7 +55,6 @@
       <TosrBuildDirectory>$(ProjectDir)bin\$(Configuration)\$(TargetFramework)</TosrBuildDirectory>
       <TosrIntegrationTestBuildDirectory>$(ProjectDir)..\TosrIntegration.Test\bin\$(Configuration)\net8.0</TosrIntegrationTestBuildDirectory>
     </PropertyGroup>
-    <Copy SourceFiles="$(TosrBuildDirectory)\Engine.dll;$(TosrBuildDirectory)\sqlite3.dll" DestinationFolder="$(TosrIntegrationTestBuildDirectory)" />
-    <Copy SourceFiles="$(TosrBuildDirectory)\Engine.dll;$(TosrBuildDirectory)\SQLiteCpp.dll" DestinationFolder="$(TosrIntegrationTestBuildDirectory)" />
+    <Copy SourceFiles="$(TosrBuildDirectory)\Engine.dll;$(TosrBuildDirectory)\sqlite3.dll;$(TosrBuildDirectory)\SQLiteCpp.dll" DestinationFolder="$(TosrIntegrationTestBuildDirectory)" />
   </Target>
 </Project>
