renamed fase to phase everywhere and removed some warnings

--- a/BiddingLogic/BiddingLogic.csproj
+++ b/BiddingLogic/BiddingLogic.csproj
@@ -3,7 +3,7 @@
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <Content Include="..\FasesWithOffset.json" Link="FasesWithOffset.json">
+    <Content Include="..\PhasesWithOffset.json" Link="PhasesWithOffset.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
