--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -47,4 +47,4 @@ jobs:
     - uses: actions/upload-artifact@v4
       with:
         name: distribute
-        path: .\Tosr\bin\Release\net8.0-windows\
+        path: .\Wpf.Tosr\bin\Release\net8.0-windows\
