--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -5,7 +5,11 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
-
+  workflow_dispatch:
+    inputs:
+      environment:
+        description: 'Environment to run tests again'
+        required: true
 jobs:
   build:
 
