--- a/Wpf.BidControls/Wpf.BidControls.csproj
+++ b/Wpf.BidControls/Wpf.BidControls.csproj
@@ -6,8 +6,8 @@
   <ItemGroup>
     <PackageReference Include="Common.BridgeClasses" Version="1.0.7" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.3.2" />
+    <PackageReference Include="morelinq" Version="4.3.0" />
     <PackageReference Include="ObjectCloner" Version="2.2.2" />
-    <PackageReference Include="Refractored.MvvmHelpers" Version="1.6.2" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Views\cardfaces.png" />
